@@ -15,9 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-/*
- * $Id$
- */
 package org.apache.xalan.processor;
 
 import java.lang.reflect.InvocationTargetException;
@@ -38,6 +35,7 @@ import org.apache.xalan.templates.ElemForEachGroup;
 import org.apache.xalan.templates.ElemFunction;
 import org.apache.xalan.templates.ElemTemplate;
 import org.apache.xalan.templates.ElemTemplateElement;
+import org.apache.xalan.templates.ElemVariable;
 import org.apache.xalan.xslt.util.StringUtil;
 import org.apache.xml.utils.NamespaceSupport2;
 import org.apache.xml.utils.QName;
@@ -45,6 +43,7 @@ import org.apache.xml.utils.StringToIntTable;
 import org.apache.xml.utils.StringVector;
 import org.apache.xml.utils.XML11Char;
 import org.apache.xpath.XPath;
+import org.w3c.dom.Node;
 import org.xml.sax.helpers.NamespaceSupport;
 
  
@@ -616,7 +615,7 @@ public class XSLTAttributeDef
             return null;
 	    }
 
-	    return new Character(value.charAt(0));
+	    return Character.valueOf(value.charAt(0));
 	}
   }
   
@@ -713,7 +712,7 @@ public class XSLTAttributeDef
     }
 
 	if (getSupportsAVT()) return avt;
-	else return new Integer(retVal);	
+	else return Integer.valueOf(retVal);	
 
   }
 
@@ -758,7 +757,7 @@ public class XSLTAttributeDef
     
     if (key != StringToIntTable.INVALID_KEY) 
     {
-        if (objToReturn == null) objToReturn = new Integer(key);
+        if (objToReturn == null) objToReturn = Integer.valueOf(key);
     }
 
     // enum not used.  Validate qname-but-not-ncname.
@@ -1014,7 +1013,7 @@ public class XSLTAttributeDef
    * @param value A string that represents a potentially prefix qualified name.
    * @param owner
    *
-   * @return A QName object if this attribute does not support AVT's.  Otherwise, an AVT
+   * @return A QName object if this attribute does not support AVT's. Otherwise, an AVT
    *         is returned.
    *
    * @throws org.xml.sax.SAXException if the string contains a prefix that can not be
@@ -1027,7 +1026,8 @@ public class XSLTAttributeDef
 
      try 
         {
-    	  QName qname = null;    	  
+    	  QName qname = null;
+    	  value = value.trim();
     	  if (value.startsWith("Q{")) {
     		 // Support for XPath 3.1 URI qualified names    
     		 int idx = value.indexOf('}');
@@ -1040,8 +1040,12 @@ public class XSLTAttributeDef
     			String localName = value.substring(idx + 1);
     			qname = new QName(Constants.XSL_ERROR_NAMESACE, localName, true); 
     		 }
+    		 else if ((idx == 2) && ((owner instanceof ElemTemplate) || (owner instanceof ElemVariable))) {
+     			String localName = value.substring(idx + 1);
+     			qname = new QName(null, localName, true); 
+     		 }
     		 
-    		 if ((qname == null) && !(owner instanceof ElemFunction)) {
+    		 if ((qname == null) && !((owner instanceof ElemTemplate) || (owner instanceof ElemVariable))) {
     			handleError(handler,XSLTErrorResources.ER_ABSENT_NAMESPACE_URI, new Object[] {owner.getNodeName()}, null);
     			
     			return null; 
@@ -1226,6 +1230,8 @@ public class XSLTAttributeDef
     StringTokenizer tokenizer = new StringTokenizer(value, " \t\n\r\f");
     int nQNames = tokenizer.countTokens();
     Vector qnames = new Vector(nQNames);
+    
+    Node node = handler.getOriginatingNode();
 
     for (int i = 0; i < nQNames; i++)
     {
@@ -1361,8 +1367,8 @@ public class XSLTAttributeDef
    * @return String value itself.
    */
   String processSTRING(StylesheetHandler handler, String uri, String name, 
-                                                  String rawName, String value) {
-     return value;
+                                                  String rawName, String value) {     
+	  return value;
   }
 
   /**
@@ -1526,12 +1532,16 @@ public class XSLTAttributeDef
 	  if (!("yes".equals(normalizedValueStr) || "true".equals(normalizedValueStr) || "1".equals(normalizedValueStr) || 
 			                                    "no".equals(normalizedValueStr) || "false".equals(normalizedValueStr) 
 			                                                                    || "0".equals(normalizedValueStr)))
-	  {      
-		  handleError(handler, XSLTErrorResources.INVALID_BOOLEAN, new Object[] {name,value}, null);
+	  {      		  
+		  ElemTemplateElement elemTemplateElem = handler.getElemTemplateElement();
+		  Integer lineNo = elemTemplateElem.getLineNumber();
+		  Integer colNo = elemTemplateElem.getColumnNumber();
+		  		  
+		  handleError(handler, XSLTErrorResources.INVALID_BOOLEAN, new Object[] {name, value, lineNo, colNo}, null);
 		  return null;
 	  }
 
-	  return new Boolean(("yes".equals(normalizedValueStr) || "true".equals(normalizedValueStr) 
+	  return Boolean.valueOf(("yes".equals(normalizedValueStr) || "true".equals(normalizedValueStr) 
 			                                               || "1".equals(normalizedValueStr)) ? true : false);
   }
 
@@ -1721,8 +1731,10 @@ public class XSLTAttributeDef
         {
            enumNamesList.append(' ');
         }
+        
         enumNamesList.append(enumValues[i]);
-    }        
+    }
+     
     return enumNamesList;
   }
 
@@ -1743,13 +1755,13 @@ public class XSLTAttributeDef
           String attrRawName, String attrValue, ElemTemplateElement elem)
             throws org.xml.sax.SAXException
   {
-    if(attrRawName.equals("xmlns") || attrRawName.startsWith("xmlns:"))
-      return true;
-    
-    if (attrRawName.equals("name") && elem instanceof ProcessorOutputElem) {
-       // To implement xsl:output element's attribute ''use-character-maps'
-       return true;
-    }
+	  if (attrRawName.equals("xmlns") || attrRawName.startsWith("xmlns:"))
+		  return true;
+
+	  if (attrRawName.equals("name") && elem instanceof ProcessorOutputElem) {
+		  // Used to implement xsl:output element's attribute 'use-character-maps'
+		  return true;
+	  }
       
     String setterString = getSetterMethodName();
 
@@ -1762,10 +1774,10 @@ public class XSLTAttributeDef
         Method meth;
         Object[] args;
 
-        if(setterString.equals(S_FOREIGNATTR_SETTER))
+        if (setterString.equals(S_FOREIGNATTR_SETTER))
         {
           // workaround for possible crimson bug
-          if( attrUri==null) attrUri="";
+          if ( attrUri==null) attrUri="";
           // First try to match with the primative value.
           Class sclass = attrUri.getClass();
           Class[] argTypes = new Class[]{ sclass, sclass,
